local storage path changed to index.html

--- a/upload.html
+++ b/upload.html
@@ -94,7 +94,7 @@
                         zip: zipUrl
                     });
                     localStorage.setItem('games', JSON.stringify(games));
-                    window.location.href = 'niko.html';
+                    window.location.href = 'index.html';
                 };
                 reader.readAsDataURL(imgFile);
             }
